Fri Aug 25 10:54:00 ITC 2006 / Jonathan Dion <dion.jonathan@gmail.com>

 - man/nut.conf : added
 - man/upsd.8
      /upsmon.8     Modified for the new configuration
      /nutupsdrv.8
 - utils/migrateconfig : Modified to handle multiple accept reject occurence
 - server/conf.c : Modified to take into account reject then accept
 - server/user.c : added actions FSD by default for upsmon user (master and slave)

Thu Aug 24 14:54:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>

 - Many files I created : cleaning to replace // comment by /* */ comments
 - drivers/main.c upsdrvctl : global variable for ups.conf are now in nut.ups.global.
 - lib/libupsconfig.c : When saving, only try to save existant configuration files 
   (not all configuration files possible XD)
 - utils : renaming migratetool into migrateconfig
 - man : added manual for migrateconfig and upsconfig

Wed Aug 9  17:06:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>

 - utils/migratetool.c : A tool to migrate from old config format to the new one
 - utils/Makefile.in : added the rules to compile migratetool
 - lib/libupsconfig.c : little to prevent a segfault in case the RUN_AS_USER group don't exist
 - common/datatypes.c : minor changes
 - utils/upsconfig.c : minor changes

Fri Aug 4  15:44:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>

 - client/upsmon.c : adaptated to use libupsconfig instead of parseconf
 - drivers/main.ch, upsdrvctl.c : adaptated to use libupsconfig
 - server/access.ch, conf.c, user.ch : adapted to use libupsconfig
 - Makefile.in in the client, driver and server directory. gendb in drivers directory
   Adapted to use libupsconfig instead of parseconf or upsconf
 - lib/makefile : adapted to make the libupsconfig.a library
 - lib/libupsconfig.ch : added some functions
 - common/data_types.c : corrected a omission
 - data/base_config/nut.conf : Some minor changes
 - utils/Makefile.in : adapted to use libupsconfig as a library
 - utils/upsconfig.c : a minor change