@@ -1,4 +1,14 @@
-Fri Aug 25 10:54:00 ITC 2006 / Jonathan Dion <dion.jonathan@gmail.com>
+Tue Aug 29 10:11:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>
+
+ - lib/libupsconfig.ch : disabled the saving in configuration
+   file of the notion of rights. For more info, look just below
+   the header of libupsconfig.h
+ - conf/comments/conf.comm.C : removed references to the rights notion
+   save of the file with those reference has been saved and will be put
+   on alioth for future when it will be enable again
+ - man/nut.conf.5 : same comment than for conf.comm.C
+
+Fri Aug 25 10:54:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>
 
  - man/nut.conf : added
  - man/upsd.8
